--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<div class="logo"><span class="#"></span></div>
 							<h2>James Potter | Portfolio</h2>
-							<p>Data analyst with competency in spreadsheets, Python, R, SQL, and Tableau</p>
+							<p>Google certified data analyst with competency in spreadsheets, Python, R, SQL, and Tableau</p>
 						</div>
 					</section>
 
