--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/jpotter80/">LinkedIn</a></li>
 							</ul>	
 							<ul class="copyright">
-								<li>&copy; James Potter Inc. All rights reserved.</li>
+								<li>&copy; 2024 James Potter. All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
