--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 											<a href="https://github.com/jpotter80/voter-data" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/jpotter80/stellar-classification" class="image"><img src="images/pic14.png" alt="" /></a>
-											<h3 class="major">Stellar-classification Repository</h3>
-											<p>Classify dwarf and giant stars, using Python modules.</p>
-											<a href="https://github.com/jpotter80/stellar-classification" class="special">Learn more</a>
+											<a href="https://github.com/jpotter80/bluesky-llm-posting" class="image"><img src="images/pic16.png" alt="" /></a>
+											<h3 class="major">Bluesky-LLM-Posting Repo</h3>
+											<p>An automated Bluesky posting bot that generates and posts AI-created images with descriptions.</p>
+											<a href="https://github.com/jpotter80/bluesky-llm-posting" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/jpotter80/stellar-classification/blob/main/ABSTRACT.md" class="image"><img src="images/pic15.png" alt="" /></a>
