--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										</article>
 										<article>
 											<a href="https://github.com/jpotter80/bluesky-llm-posting" class="image"><img src="images/pic16.png" alt="" /></a>
-											<h3 class="major">Bluesky-LLM-Posting Repo</h3>
+											<h3 class="major">Bluesky-LLM-Posting Bot</h3>
 											<p>An automated Bluesky posting bot that generates and posts AI-created images with descriptions.</p>
 											<a href="https://github.com/jpotter80/bluesky-llm-posting" class="special">Learn more</a>
 										</article>
