--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<a href="https://github.com/jpotter80" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Voter demographics using R</h2>
-										<p>Explore and clean data using R scripts, and visualizations created by ggplot.</p>
+										<p>Explore and clean data using R scripts, with visualizations created by ggplot.</p>
 										<a href="https://github.com/jpotter80" class="special">Learn more</a>
 									</div>
 								</div>
@@ -81,7 +81,7 @@
 									<a href="https://github.com/jpotter80/stellar-classification" class="image"><img src="images/pic13alt.svg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Organizing Projects with GitHub</h2>
-										<p>Manage project workflows by incorporating version control with GitHub.</p>
+										<p>Manage project workflows by incorporating version control with Git and GitHub.</p>
 										<a href="https://github.com/jpotter80/stellar-classification" class="special">Learn more</a>
 									</div>
 								</div>
@@ -94,9 +94,15 @@
 									<p>Gallery of work.</p>
 									<section class="features">
 										<article>
+											<a href="https://github.com/jpotter80/data-pipeline" class="image"><img src="images/pic17.png" alt="" /></a>
+											<h3 class="major">Data-Pipeline</h3>
+											<p>This project automates the process of ingesting CSV files, creating a PostgreSQL database, analyzing data structure using llm's, and generating SQL transformations for data cleaning and normalization.</p>
+											<a href="https://github.com/jpotter80/data-pipeline" class="special">Learn more</a>
+										</article>
+										<article>
 											<a href="https://public.tableau.com/app/profile/jpotter80/viz/BuncombeCountyNCVoterDemographics/Dashboard1" class="image"><img src="images/pic12.jpg" alt="" /></a>
 											<h3 class="major">Tableau Dashboard</h3>
-											<p>"A comprehensive analysis of voter demographics in Buncombe County, North Carolina. Utilizing R and its powerful libraries, we dive deep into the data to uncover the intricate patterns of voting behavior and demographic intersections within this region. Our project aims to provide stakeholders, policymakers, and the general public with actionable insights into the demographics of voters, focusing on their party affiliations, racial compositions, gender distributions, age groups, and geographic distributions across zip codes and school districts."</p>
+											<p>A broad analysis of voter demographics in Buncombe County, North Carolina. Utilizing R and its powerful libraries, we dive deep into the data to uncover the intricate patterns of voting behavior and demographic intersections within this region. Our project aims to provide stakeholders, policymakers, and the general public with actionable insights into the demographics of voters, focusing on their party affiliations, racial compositions, gender distributions, age groups, and geographic distributions across zip codes and school districts.</p>
 											<a href="https://public.tableau.com/app/profile/jpotter80/viz/BuncombeCountyNCVoterDemographics/Dashboard1" class="special">Learn more</a>
 										</article>
 										<article>
@@ -108,14 +114,14 @@
 										<article>
 											<a href="https://github.com/jpotter80/bluesky-llm-posting" class="image"><img src="images/pic16.png" alt="" /></a>
 											<h3 class="major">Bluesky-LLM-Posting Bot</h3>
-											<p>An automated Bluesky posting bot that generates and posts AI-created images with descriptions.</p>
+											<p>An automated Bluesky posting bot that generates and posts GenAI-created images with descriptions.</p>
 											<a href="https://github.com/jpotter80/bluesky-llm-posting" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/jpotter80/stellar-classification/blob/main/ABSTRACT.md" class="image"><img src="images/pic15.png" alt="" /></a>
-											<h3 class="major">Stellar-classification Abstract</h3>
-											<p>"This project demonstrates the effectiveness of machine learning in automating stellar classification, providing a robust and scalable solution for differentiating between giant and dwarf stars. The integration of a PostgreSQL database enhances data accessibility and management, laying the foundation for future research and analysis in astrophysical studies. Future work may include refining the model with additional features, exploring other classification algorithms, and expanding the dataset to include more diverse stellar types."</p>
-											<a href="https://github.com/jpotter80/stellar-classification/blob/main/ABSTRACT.md" class="special">Learn more</a>
+											<a href="https://github.com/jpotter80/stellar-classification" class="image"><img src="images/pic15.png" alt="" /></a>
+											<h3 class="major">Stellar-classification</h3>
+											<p>This project demonstrates the effectiveness of machine learning in automating stellar classification, providing a robust and scalable solution for differentiating between giant and dwarf stars. The integration of a PostgreSQL database enhances data accessibility and management, laying the foundation for future research and analysis in astrophysical studies. Future work may include refining the model with additional features, exploring other classification algorithms, and expanding the dataset to include more diverse stellar types.</p>
+											<a href="https://github.com/jpotter80/stellar-classification" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
