modifying styling and adding sections

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="https://github.com/jpotter80">GitHub</a></li>
 								<li><a href="https://www.linkedin.com/in/jpotter80/">LinkedIn</a></li>
+								<li><a href="https://jpotter80.observablehq.cloud/blkmtn-weather/">Observable Weather Dashboard</a></li>
 								<li><a href="https://public.tableau.com/app/profile/jpotter80/vizzes">Tableau Public</a></li>
 															</ul>
 							<a href="#" class="close">Close</a>
@@ -44,27 +45,57 @@
 						<div class="inner">
 							<div class="logo"><span class="#"></span></div>
 							<h2>James Potter | Portfolio</h2>
-							<p>Google certified data analyst with competency in spreadsheets, Python, R, SQL, and Tableau</p>
+							<p>Google & Maven Analytics certified data analyst with competency in spreadsheets, Python, R, and SQL</p>
 						</div>
 					</section>
+					
 
 				<!-- Wrapper -->
 					<section id="wrapper">
 
 						<!-- One -->
-						<section id="one" class="wrapper spotlight style1">
+							<section id="one" class="wrapper alt spotlight style2">
+								<div class="inner">
+									<div class="content" style="text-align: center; max-width: 800px; margin: 0 auto; padding: 0 20px;">
+										<h2 class="major">ABOUT ME</h2>
+											<p>Hi, I'm James Potter, a data developer based in the scenic mountains of Black Mountain, North Carolina. My journey into data analytics began with a foundation in bioscience and a passion for uncovering insights from complex datasets.</p>
+										<h3 class="minor">What I do</h3>
+											<p>I specialize in transforming raw data into actionable insights through analytics and visualization. Recently certified in Google Data Analytics, I work with Python, R, SQL, and various visualization tools to bring data stories to life. I'm particularly interested in creating interactive dashboards that make data accessible and meaningful.</p>
+										<h3 class="minor">Recent Projects</h3>
+											<p>I recently deployed my first Observable Framework project - a real-time weather dashboard for Western North Carolina. This project showcases my skills in: interactive data visualization, CI/CD pipeline implementation, cloud deployment, and real-time data processing.</p>
+										<h3 class="minor">Technical Stack</h3>
+											<h4 class="minor">Languages:</h4>
+												<p>Python, R, SQL, JavaScript</p>
+											<h4>Analysis:</h4>
+												<p>Excel, pandas, NumPy, scikit-learn</p>
+											<h4 class="minor">Visualization:</h4>
+												<p>Observable, Jupyter, Excel, Tableau, seaborn</p>
+											<h4 class="minor">Tools:</h4>
+												<p>Git, Docker, Poetry, VS Code, Copilot</p>
+											<h4 class="minor">Databases:</h4>
+												<p>PostgreSQL, duckdb</p>
+										<h3 class="minor">Currently Learning</h3>
+											<p>I believe in continuous learning and am always expanding my skill set. Currently, I'm:</p>
+											<p>Deepening my expertise in data visualization through Observable Framework, exploring machine learning applications in data analysis, building a portfolio of interactive dashboards, and integrating large language models into data pipelines.</p>
+											<p>Let's Connect! I'm always interested in collaborating on data projects or discussing opportunities in data analytics. Feel free to reach out through LinkedIn or check out my projects on GitHub.</p>
+									</div>
+								</div>
+							</section>
+
+						<!-- Two -->
+						<section id="two" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="https://public.tableau.com/app/profile/jpotter80/vizzes" class="image"><img src="images/pic10.jpg" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/jpotter80/vizzes" class="image"><img src="images/observable.png"alt="" /></a>
 								<div class="content">
-									<h2 class="major">Buncombe County, NC Voter Demographics Tableau Dashboard</h2>
-									<p>Visualize voter-data using Tableau.</p>
-									<a href="https://public.tableau.com/app/profile/jpotter80/vizzes" class="special">Learn more</a>
+									<h2 class="major">Black Mountain, NC Weather Dashboard</h2>
+									<p>Visualize weather-data using Observable Framework.</p>
+									<a href="https://jpotter80.observablehq.cloud/blkmtn-weather/" class="special">Learn more</a>
 								</div>
 							</div>
 						</section>							
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
+						<!-- Three -->
+							<section id="three" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="https://github.com/jpotter80" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
@@ -75,8 +106,8 @@
 								</div>
 							</section>
 
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
+						<!-- Four -->
+							<section id="four" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="https://github.com/jpotter80/stellar-classification" class="image"><img src="images/pic13alt.svg" alt="" /></a>
 									<div class="content">
@@ -87,8 +118,8 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+						<!-- Five -->
+							<section id="five" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
 									<p>Gallery of work.</p>
