--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<!-- Two -->
 						<section id="two" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="https://public.tableau.com/app/profile/jpotter80/vizzes" class="image"><img src="images/observable.png"alt="" /></a>
+								<a href="https://jpotter80.observablehq.cloud/blkmtn-weather/" class="image"><img src="images/observable.png"alt="" /></a>
 								<div class="content">
 									<h2 class="major">Black Mountain, NC Weather Dashboard</h2>
 									<p>Visualize weather-data using Observable Framework.</p>
