cleaning up hero section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 						<div class="inner">
 							<div class="logo"><span class="#"></span></div>
 							<h2>James Potter | Portfolio</h2>
-							<p>Google & Maven Analytics certified data analyst with competency in spreadsheets, Python, R, and SQL</p>
+							<p>
+								<h3>Data Developer</h3>
+							</p>
 						</div>
 					</section>
 					
@@ -65,7 +67,7 @@
 											<p>I recently deployed my first Observable Framework project - a real-time weather dashboard for Western North Carolina. This project showcases my skills in: interactive data visualization, CI/CD pipeline implementation, cloud deployment, and real-time data processing.</p>
 										<h3 class="minor">Technical Stack</h3>
 											<h4 class="minor">Languages:</h4>
-												<p>Python, R, SQL, JavaScript</p>
+												<p>Python, R, SQL, Markdown, HTML, JavaScript</p>
 											<h4>Analysis:</h4>
 												<p>Excel, pandas, NumPy, scikit-learn</p>
 											<h4 class="minor">Visualization:</h4>
@@ -76,7 +78,14 @@
 												<p>PostgreSQL, duckdb</p>
 										<h3 class="minor">Currently Learning</h3>
 											<p>I believe in continuous learning and am always expanding my skill set. Currently, I'm:</p>
-											<p>Deepening my expertise in data visualization through Observable Framework, exploring machine learning applications in data analysis, building a portfolio of interactive dashboards, and integrating large language models into data pipelines.</p>
+											<p>
+												<ul>
+													<li><i>Deepening my expertise in data visualization through Observable Framework</i></li>
+													<li><i>Exploring machine learning applications in data analysis</i></li>
+													<li><i>Building a portfolio of interactive dashboards</i></li>
+													<li><i>Integrating large language models into data pipelines</i></li>
+												</ul>		
+											</p>
 											<p>Let's Connect! I'm always interested in collaborating on data projects or discussing opportunities in data analytics. Feel free to reach out through LinkedIn or check out my projects on GitHub.</p>
 									</div>
 								</div>
