updated language section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 											<p>I recently deployed my first Observable Framework project - a real-time weather dashboard for Western North Carolina. This project showcases my skills in: interactive data visualization, CI/CD pipeline implementation, cloud deployment, and real-time data processing.</p>
 										<h3 class="minor">Technical Stack</h3>
 											<h4 class="minor">Languages:</h4>
-												<p>Python, R, SQL, Markdown, HTML, JavaScript</p>
+												<p>Python, R, SQL, Markdown, HTML, CSS, JavaScript</p>
 											<h4>Analysis:</h4>
 												<p>Excel, pandas, NumPy, scikit-learn</p>
 											<h4 class="minor">Visualization:</h4>
