--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="https://github.com/jpotter80">GitHub</a></li>
 								<li><a href="https://www.linkedin.com/in/jpotter80/">LinkedIn</a></li>
-								<li><a href="https://6744e22b39454a00089bed0a--blk-mtn-weather.netlify.app/">Observable Weather Dashboard</a></li>
+								<li><a href="https://blk-mtn-weather.netlify.app/">Observable Weather Dashboard</a></li>
 								<li><a href="https://public.tableau.com/app/profile/jpotter80/vizzes">Tableau Public</a></li>
 															</ul>
 							<a href="#" class="close">Close</a>
@@ -94,11 +94,11 @@
 						<!-- Two -->
 						<section id="two" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="https://6744e22b39454a00089bed0a--blk-mtn-weather.netlify.app/" class="image"><img src="images/observable.png"alt="" /></a>
+								<a href="https://blk-mtn-weather.netlify.app/" class="image"><img src="images/observable.png"alt="" /></a>
 								<div class="content">
 									<h2 class="major">Black Mountain, NC Weather Dashboard</h2>
 									<p>Visualize weather-data using Observable Framework, deployed using Netlify.</p>
-									<a href="https://6744e22b39454a00089bed0a--blk-mtn-weather.netlify.app/" class="special">Learn more</a>
+									<a href="https://blk-mtn-weather.netlify.app/" class="special">Learn more</a>
 								</div>
 							</div>
 						</section>							
