--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								<a href="https://black-mountain-weather.vercel.app/" class="image"><img src="images/observable.png"alt="" /></a>
 								<div class="content">
 									<h2 class="major">Black Mountain, NC Weather Dashboard</h2>
-									<p>Visualize weather-data using Observable Framework, deployed using Netlify.</p>
+									<p>Visualize weather-data using Observable Framework, deployed using Vercel.</p>
 									<a href="https://black-mountain-weather.vercel.app/" class="special">Learn more</a>
 								</div>
 							</div>
