--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Portfolio by JP
-	github.com/jpotter80 | jpootter80@proton.me
+	github.com/jpotter80 | jpotter80@proton.me
 	License: pixelarity.com/license
 -->
 <html>
@@ -73,7 +73,7 @@
 											<h4 class="minor">Visualization:</h4>
 												<p>Observable, Jupyter, Excel, Tableau, seaborn</p>
 											<h4 class="minor">Tools:</h4>
-												<p>Git, Docker, Poetry, VS Code, Copilot, Netlify</p>
+												<p>Git, Docker, Poetry, VS Code, Copilot, Vercel</p>
 											<h4 class="minor">Databases:</h4>
 												<p>PostgreSQL, duckdb</p>
 										<h3 class="minor">Currently Learning</h3>
